[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/scenes/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scenes/Maps/Walls.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/Items/Weapons/Lvl1Sword.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/Enemies/Enemies/Goblin.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/scenes/Enemies/Enemies/Wizard-BEasy.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/scenes/Maps/Levels/Lvl1_Tutorial.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/Kenney Pixel.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 28
outline_color = Color( 0.462745, 0.247059, 0.305882, 1 )
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 16 )

[node name="Lvl1_Tutorial" type="Node2D"]
script = ExtResource( 6 )

[node name="Tips_1" type="Label" parent="."]
margin_left = 72.0
margin_top = -144.0
margin_right = 252.0
margin_bottom = -47.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.788235, 0.333333, 0.333333, 1 )
text = "Use the 
[Left Mouse Button]
to pick up weapons
and items"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tips_2" type="Label" parent="."]
margin_left = -80.0
margin_top = -296.0
margin_right = 100.0
margin_bottom = -199.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.788235, 0.333333, 0.333333, 1 )
text = "Move your sword
to attack"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tips_3" type="Label" parent="."]
margin_left = -88.0
margin_top = -552.0
margin_right = 92.0
margin_bottom = -455.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.788235, 0.333333, 0.333333, 1 )
text = "Dodge"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" type="Node2D" parent="."]

[node name="Walls" parent="Map" instance=ExtResource( 2 )]
tile_data = PoolIntArray( -2818059, 32, 0, -2818058, 33, 0, -2818057, 33, 0, -2818056, 33, 0, -2818055, 33, 0, -2818054, 33, 0, -2818053, 33, 0, -2818052, 33, 0, -2818051, 33, 0, -2883582, 33, 0, -2883581, 33, 0, -2883580, 33, 0, -2883579, 33, 0, -2883578, 33, 0, -2883577, 33, 0, -2883576, 33, 0, -2883575, 33, 0, -2883574, 34, 0, -2752523, 39, 0, -2818038, 35, 0, -2686987, 39, 0, -2752502, 35, 0, -2621451, 39, 0, -2686966, 35, 0, -2555915, 39, 0, -2621430, 35, 0, -2490379, 39, 0, -2555894, 35, 0, -2424843, 39, 0, -2490358, 35, 0, -2359307, 39, 0, -2424822, 35, 0, -2293771, 39, 0, -2359286, 35, 0, -2228235, 39, 0, -2293750, 35, 0, -2162699, 39, 0, -2228214, 35, 0, -2097163, 39, 0, -2162678, 35, 0, -2031627, 39, 0, -2097142, 35, 0, -1966091, 39, 0, -2031606, 35, 0, -1900555, 38, 0, -1900554, 37, 0, -1900553, 37, 0, -1900552, 37, 0, -1900551, 37, 0, -1900550, 37, 0, -1900549, 37, 0, -1900548, 37, 0, -1900547, 37, 0, -1966078, 37, 0, -1966077, 37, 0, -1966076, 37, 0, -1966075, 37, 0, -1966074, 37, 0, -1966073, 37, 0, -1966072, 37, 0, -1966071, 37, 0, -1966070, 36, 0, -1835010, 39, 0, -1900543, 35, 0, -1769474, 39, 0, -1835007, 35, 0, -1703938, 39, 0, -1769471, 35, 0, -1638402, 39, 0, -1703935, 35, 0, -1572866, 39, 0, -1638399, 35, 0, -1507330, 39, 0, -1572863, 35, 0, -1441794, 39, 0, -1507327, 35, 0, -1376258, 39, 0, -1441791, 35, 0, -1310733, 32, 0, -1310732, 33, 0, -1310731, 33, 0, -1310730, 33, 0, -1310729, 33, 0, -1310728, 33, 0, -1310727, 33, 0, -1310726, 33, 0, -1310725, 33, 0, -1310724, 33, 0, -1310723, 33, 0, -1310722, 33, 0, -1376255, 33, 0, -1376254, 33, 0, -1376253, 33, 0, -1376252, 33, 0, -1376251, 33, 0, -1376250, 33, 0, -1376249, 33, 0, -1376248, 33, 0, -1376247, 33, 0, -1376246, 33, 0, -1376245, 33, 0, -1376244, 34, 0, -1245197, 39, 0, -1310708, 35, 0, -1179661, 39, 0, -1245172, 35, 0, -1114125, 39, 0, -1179636, 35, 0, -1048589, 39, 0, -1114100, 35, 0, -983053, 39, 0, -1048564, 35, 0, -917517, 39, 0, -983028, 35, 0, -851981, 39, 0, -917492, 35, 0, -786445, 39, 0, -851956, 35, 0, -720909, 39, 0, -786420, 35, 0, -655373, 38, 0, -655372, 37, 0, -655371, 37, 0, -655370, 37, 0, -655369, 37, 0, -655368, 37, 0, -655367, 37, 0, -655366, 37, 0, -655365, 37, 0, -720892, 37, 0, -720891, 37, 0, -720890, 37, 0, -720889, 37, 0, -720888, 37, 0, -720887, 37, 0, -720886, 37, 0, -720885, 37, 0, -720884, 36, 0, -589828, 39, 0, -655357, 35, 0, -524292, 39, 0, -589821, 35, 0, -458756, 39, 0, -524285, 35, 0, -393220, 39, 0, -458749, 35, 0, -327684, 39, 0, -393213, 35, 0, -262148, 39, 0, -327677, 35, 0, -196612, 39, 0, -262141, 35, 0, -131076, 39, 0, -196605, 35, 0, -65540, 39, 0, -131069, 35, 0, -4, 39, 0, -65533, 35, 0, 65532, 39, 0, 3, 35, 0, 131068, 39, 0, 65539, 35, 0, 196604, 39, 0, 131075, 35, 0, 262140, 38, 0, 262141, 37, 0, 262142, 37, 0, 262143, 37, 0, 196608, 37, 0, 196609, 37, 0, 196610, 37, 0, 196611, 36, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Lvl1Sword" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -96 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Goblin" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( -8, -304 )

[node name="Goblin2" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( 16, -304 )

[node name="Wizard-BEasy" parent="Enemies" instance=ExtResource( 5 )]
position = Vector2( 0, -680 )

[node name="Wizard-BEasy2" parent="Enemies" instance=ExtResource( 5 )]
position = Vector2( -64, -680 )

[node name="Wizard-BEasy3" parent="Enemies" instance=ExtResource( 5 )]
position = Vector2( 64, -680 )

[node name="WeaponDestroyer" type="Area2D" parent="."]
position = Vector2( 0, -328 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponDestroyer"]
position = Vector2( 0, -24 )
shape = SubResource( 2 )

[node name="Exit" type="Area2D" parent="."]
position = Vector2( 0, -696 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2( 0, -24 )
shape = SubResource( 2 )
[connection signal="body_entered" from="WeaponDestroyer" to="." method="_on_WeaponDestroyer_body_entered"]
[connection signal="body_entered" from="Exit" to="." method="_on_Exit_body_entered"]
